# mental-disorders-classification

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.toml  dprint.json  justfile  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: docs.yml
data/raw/: mental_disorders_classification.csv
docs/: index.html  mdclass.html  search.js
docs/mdclass/: app.html  config.html  data.html  env.html  models.html  utils.html
docs/mdclass/app/: routes.html
docs/mdclass/data/: loaders.html  process.html
docs/mdclass/models/: base.html  info.html  params.html  predict.html  storage.html  training.html  validation.html
docs/mdclass/utils/: dataframe.html  path.html
scripts/: info_model.py  process_dataset.py  train_model.py  validate_model.py
src/mdclass/: __init__.py  config.py  env.py
src/mdclass/app/: __init__.py
src/mdclass/app/routes/: __init__.py  dataset_route.py  index_route.py  info_route.py  preview_route.py
src/mdclass/app/static/styles/: font.css  global.css
src/mdclass/app/templates/: _formhelpers.j2  base.j2  dataset.j2  home.j2  info.j2  preview.j2
src/mdclass/data/: loaders.py  process.py
src/mdclass/models/: base.py  info.py  params.py  predict.py  storage.py  training.py  validation.py
src/mdclass/utils/: dataframe.py  path.py
