[project]
name = "mdclass"
version = "0.1.0"
description = "Machine Learning Model for Mental Disorders Classification"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "dprint-py>=0.50.2.0",
    "microsoft-python-type-stubs",
    "pdoc>=16.0.0",
    "ruff>=0.14.2",
]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[tool.uv.build-backend]
module-name = "mdclass"
module-root = "src"

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
